--- a/shelfcafe/css/style.css
+++ b/shelfcafe/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+/*スマホサイト(768px 以下)のCSS */
+
 /* common ---------------------- */
 body{
 	font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
@@ -16,60 +18,137 @@ a:hover{
 }
 
 #wrapper{
-	width:950px;
-	margin: 40px auto 0;
+	width:100%;
+	margin: 20px 0;
+}
+
+.inner{
+	padding:0 10px;
+}
+
+@media screen and (min-width:768px){
+
+	/*PCサイト（769px 以上）のCSS*/
+	#wrapper{
+		width:950px;
+		margin: 40px auto 0;
+
+	}
+	.inner{
+		padding: 0;
+	}
 }
 
 /* header ------------------------*/
+
 header{
-	width:950px;
-	height:80px;
-	position:relative;
+	width: 100%;
+	margin-bottom: 40px;
 }
 header h1{
-	width:221px;
-	height:28px;
-	position:absolute;
-	left:0;
-	top:0;
+	width: 221px;
+	margin: 0 auto;
 }
 header p{
-	width:350px;
-	height:28px;
-	position:absolute;
-	left:240px;
-	top:0;
+	width:100%;
+	text-align: center;
 }
 
+@media screen and (min-width:768px){
+	header{
+		width:950px;
+		height:80px;
+		position:relative;
+	}
+	header h1{
+		width:221px;
+		height:28px;
+		position:absolute;
+		left:0;
+		top:0;
+	}
+	header p{
+		width:350px;
+		height:28px;
+		position:absolute;
+		left:240px;
+		top:0;
+	}
+}
 
 /* nav -------------------------*/
-nav ul li{
-	width:150px;
-	float:left;
-	border-bottom:1px #000 solid;
-	padding-bottom:5px;
-	margin-bottom:30px;
-	margin-right:10px;
+
+nav ul{
+	width: 100%;
+	border-top: 1px #000000 solid;
 }
-nav ul li:last-child{
-	margin-right:0;
-}
-nav ul li a{
-	color:#000;
-	text-decoration:none;
-	width:150px;
-	display:block;
-	font-family:Arial, Helvetica, sans-serif;
+nav li{
+	width: 100%;
+	border-bottom: 1px #000000 solid;
 }
 
-/* mainVisual -------------------------*/
-#mainVisual{
-	margin-bottom:40px;
+nav li a:link, nav li a:visited{
+	color: #000000;
+	text-decoration: none;
+	width: 100%;
+	display: block;
+	padding: 15px 0;
+	font-size: 16px;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
 }
 
-/* container --------------------------*/
+@media screen and (min-width:768px){
+	nav ul{
+		border-top: none;
+
+	}
+	nav ul li{
+		width:150px;
+		float:left;
+		border-bottom:1px #000 solid;
+		padding-bottom:5px;
+		margin-bottom:30px;
+		margin-right:10px;
+	}
+	nav ul li:last-child{
+		margin-right:0;
+	}
+	nav ul li a:link, nav ul li a:visited{
+		color:#000;
+		width:150px;
+		display:block;
+		font-size: 12px;
+		text-align: left;
+	}
+}
+/*mainVisual*/
+	#mainVisual{
+		margin-bottom: 40px;
+		width: 100%;
+	}
+	#mainVisual img{
+		width: 100%;
+		max-width: 100%;
+	}
+
+@media screen and (min-width:768px){
+
+	#mainVisual{
+		width: 950px;
+		margin-bottom: 40px;
+	}
+	#mainVisual img{
+	width: 950px;;
+
+	}
+}
+/*container-------------------------*/
 #container{
 	overflow: hidden;
+	width: 100%;
+	padding: 0 10px;
+	box-sizing: :boder-box;
 }
 
 /* container common */
@@ -88,8 +167,7 @@ nav ul li a{
 
 /*whatsNew*/
 #whatsNew{
-	width:310px;
-	float:left;
+	width:100px;
 }
 #whatsNew dt{
 	font-size:11px;
@@ -104,42 +182,90 @@ nav ul li a{
 	border-bottom:none;
 }
 
-/*about*/
-#about{
-	width:310px;
-	float:left;
-	margin:0 10px;
+@media screen and (min-width:768px){
+
+	/*whatsNew*/
+	#whatsNew{
+		width:310px;
+		float:left;
+	}
+	#whatsNew dt{
+		font-size:11px;
+		color:#333;
+	}
+	#whatsNew dd{
+		border-bottom:1px #999 solid;
+		padding-bottom:10px;
+		margin-bottom:10px;
+	}
+	#whatsNew dd:last-child{
+		border-bottom:none;
+	}
 }
-#about img{
-	width:310px;
+	/*about*/
+	#about{
+		width:100%;
+		margin:0;
+	}
+	#about img{
+		width:100%;
+		max-width: 100%;
+		height: auto;
+	}
+	@media screen and (min-width:768px){
+
+
+	}
+	/*todaysMenu*------------------------------------*/
+	#todaysMenu{
+		width:100%;
+
+	}
+	#menu01{
+		width:100%;
+	}
+
+	#menu02{
+		width:100%;
+	}
+
+.thumb{
+	float: left;
+	overflow: hidden;
 }
 
-/*todaysMenu*/
-#todaysMenu{
-	width:310px;
-	float:right;
-}
-#menu01{
-	width:150px;
-	float:left;
+@media screen and (min-width:768px){
+	#todaysMenu{
+		width:310px;
+		float:right;
+	}
+	#menu01{
+		width:150px;
+		float:left;
+	}
+
+	#menu02{
+		width:150px;
+		float:right;
+	}
+
 }
 
-#menu02{
-	width:150px;
-	float:right;
-}
+	/* footer --------------------------*/
+	footer{
+		margin:40px 0;
+		border-top:1px #000 solid;
+		padding-top:20px;
+	}
+	footer p{
+		text-align:cebter;
+		font-size:10px;
+		color:#666666;
+		font-family:Arial, Helvetica, sans-serif;
+	}
+@media screen and (min-width:768px){
+	footer p{
+		text-align:right;
+	}
 
-
-
-/* footer --------------------------*/
-footer{
-	margin:40px 0;
-	border-top:1px #000 solid;
-	padding-top:20px;
-}
-footer p{
-	text-align:right;
-	font-size:10px;
-	color:#666666;
-	font-family:Arial, Helvetica, sans-serif;
 }
